// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetectedTokenIgnoredPopover should match snapshot for ignore mode 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class="mm-modal detected-token-ignored-popover detected-token-ignored-popover--ignore"
  >
    <div
      aria-hidden="true"
      class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
      >
        <section
          aria-modal="true"
          class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm mm-box--padding-4 mm-box--width-full mm-box--background-color-background-default mm-box--rounded-lg"
          role="dialog"
          style="overflow-y: auto;"
        >
          <div
            class="mm-box mm-header-base mm-modal-header mm-box--margin-bottom-4 mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box"
            >
              <header
                class="mm-box mm-text mm-text--heading-sm mm-text--text-align-center mm-box--color-text-default"
              >
                [areYouSure]
              </header>
            </div>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-bottom-4 mm-box--color-text-default"
          >
            [ignoreTokenWarning]
          </p>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--justify-content-center"
          >
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block detected-token-ignored-popover__ignore-button mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-muted mm-box--rounded-xl"
            >
              [cancel]
            </button>
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block detected-token-ignored-popover__import-button mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-inverse mm-box--background-color-icon-default mm-box--rounded-xl"
              data-testid="detected-token-ignored-popover-confirm-button"
            >
              [confirm]
            </button>
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`DetectedTokenIgnoredPopover should match snapshot for import mode 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class="mm-modal detected-token-ignored-popover detected-token-ignored-popover--import"
  >
    <div
      aria-hidden="true"
      class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
      >
        <section
          aria-modal="true"
          class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm mm-box--padding-4 mm-box--width-full mm-box--background-color-background-default mm-box--rounded-lg"
          role="dialog"
          style="overflow-y: auto;"
        >
          <div
            class="mm-box mm-header-base mm-modal-header mm-box--margin-bottom-4 mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box"
            >
              <header
                class="mm-box mm-text mm-text--heading-sm mm-text--text-align-center mm-box--color-text-default"
              >
                [importSelectedTokens]
              </header>
            </div>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-bottom-4 mm-box--color-text-default"
          >
            [importSelectedTokensDescription]
          </p>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--justify-content-center"
          >
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block detected-token-ignored-popover__ignore-button mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-muted mm-box--rounded-xl"
            >
              [cancel]
            </button>
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block detected-token-ignored-popover__import-button mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-inverse mm-box--background-color-icon-default mm-box--rounded-xl"
              data-testid="detected-token-ignored-popover-confirm-button"
            >
              [confirm]
            </button>
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;
